Make images display block by default to fix extra spacing around them

--- a/core/scss/_reboot_email.scss
+++ b/core/scss/_reboot_email.scss
@@ -27,6 +27,7 @@ img {
   line-height: 100%;
   outline: none;
   text-decoration: none;
+  display: block;
 }
 
 a img {
